app/website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  labels:
    app: argocdrocks
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: haproxy
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: website-service
            port:
              number: 8080
